tests/paczka1/fuzzy1/47527119.err
Error in line 4: SvFd54xffmr S942 23,7
Error in line 16: q34 S942 84,07
Error in line 21: 15PxD S942 3,65
Error in line 10: 15PxD S942 34,7
Error in line 30: F2n4lGDOl S238 19,5
